Made the font on the run progress buttons smaller to prevent text wrapping.

--- a/src/TeamCard.css
+++ b/src/TeamCard.css
@@ -37,9 +37,8 @@
     font-stretch: extra-condensed !important;
 }
 
-.team-progress {
-    font-size: small;
-    background-color: rgb(253, 232, 0);
+#team-progress {
+    font-size: x-small;
 }
 
 #black {
